Naviframe : fix text overflow option of '.ui-title-text-sub'
modify calculation routine of 'h1' and '.ui-title-text-sub' width (N_SE-44448)

--- a/src/themes/tizen/common/jquery.mobile.theme.less
+++ b/src/themes/tizen/common/jquery.mobile.theme.less
@@ -149,6 +149,9 @@
 		font-size : 16 * @unit_base;
 		font-weight : 500;
 		text-shadow : 0px 2px @color_bar_title_shadow;
+		text-overflow : ellipsis;
+		white-space : nowrap;
+		overflow : hidden;
 	}
 
 	> .ui-btn, 
